# pdf-translator

./: .gitignore  AGENTS.md  README.md  new-strat-proposal.md  pyproject.toml  requirements.txt
docs/: pdf-translation-architecture.md  progress.md
pages/page_4/: layout.json  text.en.json
scripts/: make_sample_pdf.py  setup_ocr_venv.sh
src/: __init__.py  extract.py  inspect_spans.py  ocr_worker.py  rebuild.py  spans.py  translate.py
