[project]
name = "pdf-translator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.0",
    "numpy>=1.26.0",
    "paddlepaddle>=3.0.0",
    "paddleocr>=2.7.0",
    "deep-translator>=1.11.0",
    "Pillow>=10.0.0",
    "aiofiles>=24.0.0",
    "Jinja2>=3.1.0",
]

[tool.pyright]
venvPath = "."
venv = "venv"
pythonVersion = "3.14"

[tool.mypy]
python_version = "3.14"
mypy_path = "venv/lib/python3.14/site-packages"
